# middleman

./: .gitignore  README.md  config.example.json  middleman.cabal
app/: Main.hs
middleman/: bruno.json
scripts/example/: identity-output.hs  identity.hs  identity.py  inject-auth.hs  inject-auth.py
scripts/test/: modify-request.hs  modify-request.py
src/: Middleman.hs
src/Middleman/: Config.hs  Logging.hs  Pipeline.hs  Proxy.hs  Router.hs  Script.hs  Server.hs  Types.hs
src/Middleman/Config/: Types.hs
src/Middleman/Script/: Haskell.hs  Python.hs  Types.hs
test/Middleman/: ConfigSpec.hs  IntegrationSpec.hs  PipelineSpec.hs  ProxySpec.hs  RouterSpec.hs  ScriptSpec.hs  TypesSpec.hs
