cabal-version:   3.0
name:            middleman
version:         0.1.0.0
synopsis:        Configurable proxy server for AI agents
license:         BSD-3-Clause
build-type:      Simple

common common-deps
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications

library
  import:          common-deps
  hs-source-dirs:  src
  exposed-modules:
    Middleman
    Middleman.Config
    Middleman.Config.Types
    Middleman.Logging
    Middleman.Pipeline
    Middleman.Proxy
    Middleman.Router
    Middleman.Server
    Middleman.Script
    Middleman.Script.Haskell
    Middleman.Script.Python
    Middleman.Script.Types
    Middleman.Types

  build-depends:
    , aeson              >=2.1
    , base               >=4.17 && <5
    , bytestring         >=0.11
    , case-insensitive   >=1.2
    , directory          >=1.3
    , fast-logger        >=3.1
    , filepath           >=1.4
    , hint               >=0.9
    , http-client        >=0.7
    , http-client-tls    >=0.3
    , http-types         >=0.12
    , process            >=1.6
    , text               >=2.0
    , wai                >=3.2
    , warp               >=3.3

executable middleman
  import:          common-deps
  hs-source-dirs:  app
  main-is:         Main.hs
  ghc-options:     -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base                  >=4.17 && <5
    , optparse-applicative  >=0.17
    , text                  >=2.0
    , middleman

test-suite middleman-test
  import:          common-deps
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Spec.hs
  ghc-options:     -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Middleman.ConfigSpec
    Middleman.IntegrationSpec
    Middleman.PipelineSpec
    Middleman.ProxySpec
    Middleman.RouterSpec
    Middleman.ScriptSpec
    Middleman.TypesSpec

  build-depends:
    , aeson        >=2.1
    , base         >=4.17 && <5
    , bytestring   >=0.11
    , hspec        >=2.11
    , http-client  >=0.7
    , http-types   >=0.12
    , text         >=2.0
    , wai          >=3.2
    , warp         >=3.3
    , middleman
  build-tool-depends:
    hspec-discover:hspec-discover
